[package]
name = "img_dl"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
lazy_static = "1.4.0"
reqwest = "0.11.1"
anyhow = "1.0"
tokio = {version = "1.2", features = ["fs", "macros", "rt-multi-thread", "time"]}
access-queue = "1.1"
futures = "0.3"